fix how we right align things in the modal and icon is a pencil instead of brain now

--- a/Interface/style.css
+++ b/Interface/style.css
@@ -100,8 +100,7 @@ button:not(:disabled):hover {
     margin: 0.5em 0;
 }
 
-.modal > div > input,
-.modal > div > .passBtn {
+.modal .rightAlign {
     float: right;
 }
 
